--- a/.github/workflows/svf-example-build.yml
+++ b/.github/workflows/svf-example-build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     env:
-      XCODE_VERSION: '15.3.0'
+      XCODE_VERSION: "15.3.0"
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          
-      # setup the environment 
+
+      # setup the environment
       - name: mac-setup
         if: runner.os == 'macOS'
         uses: maxim-lobanov/setup-xcode@v1
@@ -37,15 +37,15 @@ jobs:
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt-get update
           sudo apt-get install cmake gcc g++ nodejs doxygen graphviz
-          
+
       # install llvm and svf
       - name: env-setup
         run: |
           npm install svf-lib
-          
+
       # build current repo
       - name: build-svf-example
         run: |
-         source $GITHUB_WORKSPACE/env.sh
-         cmake .
-         make 
+          cmake -B build -S ./ --install-prefix=$GITHUB_WORKSPACE
+          cmake --build build --verbose
+          cmake --install build --verbose
